vis.css importattu

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -1,5 +1,6 @@
 @import './loading-bar.css'
 @import './ui-grid.min.css'
+@import './vis.css'
 @import './nv.d3.css'
 @import './xeditable.css'
 @import './nya-bs-select.css'
