LIVIJUKU-787 Tunnuslukujen syöttäminen: asukaslukulinkin ja tooltipin päivittäminen

--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -257,8 +257,8 @@
                      tooltip-enable="haeTunnuslukuTooltip('ASUKASMAARA')"
                      tooltip-placement="top"
                      tooltip-append-to-body="true">Asukasmäärä (<a
-                  href="http://www.vrk.fi/default.aspx?id=278"
-                  target="_blank">VRK:n asukaslukutilastot</a>)&nbsp;<span
+                  href="http://pxnet2.stat.fi/PXWeb/pxweb/fi/StatFin/StatFin__vrm__vamuu/020_vamuu_tau_103.px/"
+                  target="_blank">Tilastokeskuksen väkiluku-palvelu</a>)&nbsp;<span
                   ng-if="haeTunnuslukuTooltip('MAAPINTAALA')"
                   class="text-info small glyphicon glyphicon-question-sign"></span></div>
               </td>
