LIVIJUKU-484 - seurantatieto pdf-dokumentti linkki hakemusnäytölle seurantatiedot-kappaleeseen.

--- a/app/scripts/views/hakemus/seuranta-forms.html
+++ b/app/scripts/views/hakemus/seuranta-forms.html
@@ -62,5 +62,11 @@
       </div>
     </uib-accordion-group>
   </uib-accordion>
+  <p>Avaa viimeisin tallennettu versio seurantatiedoista
+    <a href="{{seurantatietoPdf}}" target="_blank">
+      <span class="glyphicon glyphicon-file"></span>
+      pdf-dokumenttina.
+    </a> Huomaa että tallentamattomat muutokset eivät näy tässä pdf-dokumentissa.
+  </p>
 </juku-form-section>
 
