LIVIJUKU-484 - pdf-dokumentin lautauslinkin tekstin tarkennus

--- a/app/scripts/views/hakemus/seuranta-forms.html
+++ b/app/scripts/views/hakemus/seuranta-forms.html
@@ -62,7 +62,7 @@
       </div>
     </uib-accordion-group>
   </uib-accordion>
-  <p>Avaa viimeisin tallennettu versio seurantatiedoista
+  <p>Voit tarkastella viimeisintä tallennettua versiota seurantatiedoista
     <a href="{{seurantatietoPdf}}" target="_blank">
       <span class="glyphicon glyphicon-file"></span>
       pdf-dokumenttina.
