LIVIJUKU-781 - henkiloautoliikennesuoritteen yksikkö: Milj. km / vuosi

--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -325,7 +325,7 @@
                          numeric-only="" ng-currency="" max="9999999999.99"
                          currency-symbol="" noenter
                          select-on-click
-                         placeholder="km / vuosi"
+                         placeholder="Milj. km / vuosi"
                          ng-model="tunnusluvut.alue.henkiloautoliikennesuorite">
                 </form-group-compact>
               </td>
