LIVIJUKU-789 Muutettu Kilpailutukset-sivulle johtavan välilehden otsikko.

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -48,7 +48,7 @@
             | toClass:'is-active'
           }}" ng-show="sallittu(user, 'view-hakemus')">
           <a class="header__link" ui-sref="app.yhteinen.kilpailutukset">
-            Kilpailutukset
+            Liikennöintitiedot
           </a>
         </li>
       </ul>
