LIVIJUKU-789 Lisätty z-index nya-bootstrap-select:lle.

--- a/app/scripts/views/yhteinen/kilpailutukset.html
+++ b/app/scripts/views/yhteinen/kilpailutukset.html
@@ -6,7 +6,7 @@
   		<div class="col-xs-12 col-sm-6 col-md-3">
 		  	<h3>Organisaatio</h3>
 		  	<ol id="organisaatio" ng-model="organisaatioId" ng-disabled="isReadonly()"
-        	title="Näytä kaikki" class="form-control nya-bs-select" size="20" required multiple>
+        	title="Näytä kaikki" class="form-control nya-bs-select" size="20" required multiple style="z-index: 10;">
          	<li nya-bs-option="organisaatio in organisaatiot" data-value="organisaatio.id">
           	<a>{{ organisaatio.nimi }}</a>
         </ol>
