LIVIJUKU-789 Muutettu kilpailutusten eri osioiden värit, tyylitelty Hilma-linkki ja lisätty väreille selitykset aikajanan yläosaan.

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -29,6 +29,28 @@
 		</div>
   </form>
 
+  <div class="row">
+    <div class="col-xs-12" style="padding-bottom: 1em;">
+      <div style="float: left;">
+        <div style="width: 20px; height: 20px; background-color: #0085c9; float: left;">
+          &nbsp;
+        </div>
+        <div style="margin-left: 2em; margin-right: 5em;">= Tarjousten jättäminen</div>
+      </div>
+      <div style="float: left;">
+        <div style="width: 20px; height: 20px; background-color: lightblue; float: left;">
+          &nbsp;
+        </div>
+        <div style="margin-left: 2em; margin-right: 5em;">= Tarjousten käsittely</div>
+      </div>
+      <div style="float: left;">
+        <div style="width: 20px; height: 20px; background-color: brown; float: left;">
+          &nbsp;
+        </div>
+        <div style="margin-left: 2em; margin-right: 5em;">= Liikennöinnin valmistelu</div>
+      </div>
+    </div>
+  </div>
   <timeline
   	organisaatiot="organisaatiot"
   	kilpailutukset="kilpailutukset"
