LIVIJUKU-806 Tooltipit saa säädettyä kokonaan näkyviin top-left -määrityksellä, jolloin tooltip ei mene näytön vasemmasta laidasta yli.

--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -4,60 +4,76 @@
       <thead>
         <tr>
           <th class="col-md-2">
-            <div uib-tooltip="Valitse suorite linja-, sopimus-, tai kokonaistasolla." tooltip-placement="top"
+            <div uib-tooltip="Valitse suorite linja-, sopimus-, tai kokonaistasolla." tooltip-placement="top-left"
                  tooltip-append-to-body="true">
               Suoritetyyppi&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
             </div>
           </th>
           <th class="col-md-2">
-            <div
-              uib-tooltip="Kirjoita suoritteen nimi, esimerkiksi linjan numero, sopimuksen nimi tai sopimuskokonaisuus."
-              tooltip-placement="top"
-              tooltip-append-to-body="true">
-              Suoritteen nimi&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+            <div class="inline-block">
+              <div
+                uib-tooltip="Kirjoita suoritteen nimi, esimerkiksi linjan numero, sopimuksen nimi tai sopimuskokonaisuus."
+                tooltip-placement="top"
+                tooltip-append-to-body="true">
+                Suoritteen nimi&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+              </div>
             </div>
           </th>
           <th>
-            <div uib-tooltip="Linja-autojen lukumäärä" tooltip-placement="top"
-                 tooltip-append-to-body="true">
-              Linja-autot&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+            <div class="inline-block">
+              <div uib-tooltip="Linja-autojen lukumäärä" tooltip-placement="top"
+                   tooltip-append-to-body="true">
+                Linja-autot&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+              </div>
             </div>
           </th>
           <th>
-            <div uib-tooltip="Taksien lukumäärä" tooltip-placement="top"
-                 tooltip-append-to-body="true">
-              Taksit&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+            <div class="inline-block">
+              <div uib-tooltip="Taksien lukumäärä" tooltip-placement="top"
+                   tooltip-append-to-body="true">
+                Taksit&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+              </div>
             </div>
           </th>
           <th>
-            <div uib-tooltip="Paikallisliikenteen ajokilometrit"
-                 tooltip-append-to-body="true">
-              Ajo&shy;kilometrit&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+            <div class="inline-block">
+              <div uib-tooltip="Paikallisliikenteen ajokilometrit"
+                   tooltip-append-to-body="true">
+                Ajo&shy;kilometrit&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+              </div>
             </div>
           </th>
           <th>
-            <div uib-tooltip="Paikallisliikenteen matkustajamäärä" tooltip-placement="top"
-                 tooltip-append-to-body="true">
-              Matkus&shy;tajat&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+            <div class="inline-block">
+              <div uib-tooltip="Paikallisliikenteen matkustajamäärä" tooltip-placement="top"
+                   tooltip-append-to-body="true">
+                Matkus&shy;tajat&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+              </div>
             </div>
           </th>
           <th>
-            <div uib-tooltip="Saadut matkalipputulot" tooltip-placement="top"
-                 tooltip-append-to-body="true">
-              Lippu&shy;tulo&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+            <div class="inline-block">
+              <div uib-tooltip="Saadut matkalipputulot" tooltip-placement="top"
+                   tooltip-append-to-body="true">
+                Lippu&shy;tulo&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+              </div>
             </div>
           </th>
           <th>
-            <div uib-tooltip="Kaupungin liikennöitsijöille maksama hinta, sisältää valtionavun"
-                 tooltip-placement="top"
-                 tooltip-append-to-body="true">
-              Netto&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+            <div class="inline-block">
+              <div uib-tooltip="Kaupungin liikennöitsijöille maksama hinta, sisältää valtionavun"
+                   tooltip-placement="top"
+                   tooltip-append-to-body="true">
+                Netto&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+              </div>
             </div>
           </th>
           <th>
-            <div uib-tooltip="Lipputulo + nettohinta" tooltip-placement="top"
-                 tooltip-append-to-body="true">
-              Brutto&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+            <div class="inline-block">
+              <div uib-tooltip="Lipputulo + nettohinta" tooltip-placement="top"
+                   tooltip-append-to-body="true">
+                Brutto&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
+              </div>
             </div>
           </th>
           <th ng-hide="isReadonly()">Toiminnot</th>
