--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -16,6 +16,9 @@ h3
   padding-bottom: 5px
   font-weight: 600
 
+.inline-block
+  display: inline-block;
+
 .form-control[disabled],
 .form-control[readonly],
 fieldset[disabled] .form-control
