LIVIJUKU-789 Vaihdettu liikennöinnin eri osien nimikkeet ja lisätty nimike optiokaudelle.

--- a/app/scripts/views/kilpailutukset/kilpailutukset.html
+++ b/app/scripts/views/kilpailutukset/kilpailutukset.html
@@ -45,13 +45,13 @@
         <div style="width: 20px; height: 20px; background-color: #2479B2; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;">= Tarjousten jättäminen</div>
+        <div style="margin-left: 2em;">= Tarjousaika</div>
       </div>
       <div style="float: left; width: 220px;">
         <div style="width: 20px; height: 20px; background-color: #35ACFF; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;">= Tarjousten käsittely</div>
+        <div style="margin-left: 2em;">= Tarjousten käsittely ja hankintapäätös</div>
       </div>
       <div style="float: left; width: 220px;">
         <div style="width: 20px; height: 20px; background-color: #B27215; float: left;">
@@ -63,7 +63,13 @@
         <div style="width: 20px; height: 20px; background-color: #FFA829; float: left;">
           &nbsp;
         </div>
-        <div style="margin-left: 2em;">= Liikennöinti</div>
+        <div style="margin-left: 2em;">= Liikennöinti (sopimuskausi)</div>
+      </div>
+      <div style="float: left; width: 220px;">
+        <div style="width: 20px; height: 20px; background-color: red; float: left;">
+          &nbsp;
+        </div>
+        <div style="margin-left: 2em;">= Liikennöinti (optiokausi)</div>
       </div>
     </div>
   </div>
