LIVIJUKU-805 Summarivien välistyksiä muutettu uuden Ps-19 -luokan avulla.

--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -85,12 +85,12 @@
             <span class="yhteensa">Yhteensä:</span>
           </td>
           <td></td>
-          <td>{{linjaautotSumma() | currency : '' : 0}}</td>
-          <td>{{taksitSumma() | currency : '' : 0}}</td>
-          <td>{{ajokmSumma() | currency : 'km'}}</td>
-          <td>{{matkustajatSumma() | currency : '' : 0}}</td>
-          <td>{{lipputuloSumma() | currency}}</td>
-          <td>{{nettohintaSumma() | currency}}</td>
+          <td class="Ps-19">{{linjaautotSumma() | currency : '' : 0}}</td>
+          <td class="Ps-19">{{taksitSumma() | currency : '' : 0}}</td>
+          <td class="Ps-19">{{ajokmSumma() | currency : 'km'}}</td>
+          <td class="Ps-19">{{matkustajatSumma() | currency : '' : 0}}</td>
+          <td class="Ps-19">{{lipputuloSumma() | currency}}</td>
+          <td class="Ps-19">{{nettohintaSumma() | currency}}</td>
           <td>{{bruttohintaSumma() | currency}}</td>
           <td></td>
         </tr>
