--- a/app/scripts/components/seuranta/lippu/index.html
+++ b/app/scripts/components/seuranta/lippu/index.html
@@ -18,12 +18,12 @@
           <td>
             <span class="yhteensa">Yhteensä:</span>
           </td>
-          <td>{{myyntiSumma() | currency : '' : 0}}</td>
-          <td>{{matkatSumma() | currency : '' : 0}}</td>
-          <td>{{asiakashintaSumma() | currency}}</td>
-          <td>{{keskipituusSumma() | currency : 'km'}}</td>
-          <td>{{lipputuloSumma() | currency}}</td>
-          <td>{{rahoitusSumma() | currency}}</td>
+          <td class="Ps-19">{{myyntiSumma() | currency : '' : 0}}</td>
+          <td class="Ps-19">{{matkatSumma() | currency : '' : 0}}</td>
+          <td class="Ps-19">{{asiakashintaSumma() | currency}}</td>
+          <td class="Ps-19">{{keskipituusSumma() | currency : 'km'}}</td>
+          <td class="Ps-19">{{lipputuloSumma() | currency}}</td>
+          <td class="Ps-19">{{rahoitusSumma() | currency}}</td>
           <td></td>
         </tr>
       </tfoot>
