--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -336,3 +336,6 @@ textarea
   font-size: 18px
   padding-top: 15px
   font-weight: 400
+
+.Ps-19
+  padding-left: 19px !important; /* !important is here because of the bootstrap */
